--- a/views/base.jade
+++ b/views/base.jade
@@ -14,7 +14,7 @@
 doctype html
 html(lang="en")
   head
-    title Bookshelf - Node.js on Google Cloud Platform
+    title PixelWear - Node.js on Google Cloud Platform
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
@@ -22,11 +22,9 @@ html(lang="en")
     .navbar.navbar-default
       .container
         .navbar-header
-          .navbar-brand Bookshelf
+          .navbar-brand PixelWear
 
         ul.nav.navbar-nav
-          li
-            a(href="/books") Books
           li
             a(href="/books/mine") My Books
 
