--- a/views/books/list.jade
+++ b/views/books/list.jade
@@ -14,7 +14,7 @@
 extends ../base.jade
 
 block content
-  h3 Books
+  h3 My Wardrobe
 
   a(href="/books/add", class='btn btn-success btn-sm')
     i.glyphicon.glyphicon-plus
