--- a/views/books/view.jade
+++ b/views/books/view.jade
@@ -14,16 +14,16 @@
 extends ../base.jade
 
 block content
-  h3 Book
+  h3 Clothing
     small
 
   .btn-group
     a(href="/books/#{book.id}/edit", class='btn btn-primary btn-sm')
       i.glyphicon.glyphicon-edit
-      span  Edit book
+      span  Edit clothing
     a(href="/books/#{book.id}/delete", class='btn btn-danger btn-sm')
       i.glyphicon.glyphicon-trash
-      span  Delete book
+      span  Delete clothing
 
   .media
     .media-left
